--- a/registro.html
+++ b/registro.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="CSS/style.css" rel="stylesheet">
 </head>
-<body class="d-flex justify-content-center align-items-center vh-100">
+<body  class="d-flex justify-content-center align-items-center vh-100 Fondobody">
     <div class="card p-4" style="width: 20rem;">
         <h3 class="text-center">Registro</h3>
         <form action="PHP/registrarUsuario.php" method="POST">
