ACTUALIZACION PARA AWS(OK)

--- a/registro.html
+++ b/registro.html
@@ -23,6 +23,10 @@
                 <label for="password" class="form-label">Contraseña</label>
                 <input type="password" class="form-control" id="password" name="password" minlength="8" required>
             </div>
+            <div class="mb-3">
+                <label for="password2" class="form-label">Contraseña</label>
+                <input type="password2" class="form-control" id="password2" name="password2" minlength="8" required>
+            </div>
             <button type="submit" class="btn btn-primary w-100">Registrarse</button>
             <p class="text-center mt-3">
                 ¿Ya tienes una cuenta? <a href="login.html">Inicia sesión</a>
